--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(projet_quoridor_ing3_2024_ing3_quoridor_2024_s01_33 C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(projet_quoridor_ing3_2024_ing3_quoridor_2024_s01_33
-        TEST.c)
+        main.c)
