--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(projet_quoridor_ing3_2024_ing3_quoridor_2024_s01_33
         main.c
-        premiere_partie_mirina.c)
+        premiere_partie_mirina.c
+        choix_des_pions_camille.c)
