--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,7 @@ project(projet_quoridor_ing3_2024_ing3_quoridor_2024_s01_33 C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(projet_quoridor_ing3_2024_ing3_quoridor_2024_s01_33
-        main.c
-        premiere_partie_mirina.c)
+        premiere_partie_mirina.c
+        header_premiere_partie_mirina.h
+        main_début_partie_mirina.c
+        main.c)
